--- a/next/components/layout/dropdown.module.css
+++ b/next/components/layout/dropdown.module.css
@@ -23,6 +23,12 @@
     overflow-y: scroll;
 }
 
+@media (max-width: 1080px) {
+    .dropdown > :last-child {
+        left: -50px;
+    }
+}
+
 .dropdown > :last-child > {
     height: 39px;
 }
